Fixed spacing for footer items.

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -32,6 +32,18 @@ $spacers: (
   6: 7rem,
   7: 9rem
 );
+
+$font-sizes: (
+  1: 2.5rem,
+  2: 2rem,
+  3: 1.75rem,
+  4: 1.5rem,
+  5: 1.25rem,
+  6: 1rem,
+  7: 0.875rem, // New size
+  8: 0.75rem  // Another new size
+);
+
 /////////////////////////////////////////////////////////////////////////////////////
 /// Variables //////////////////////////////////////////////////////////////////////
 @import "../node_modules/bootstrap/scss/variables";
@@ -55,6 +67,8 @@ $headings-letter-spacing: (
   h2: -5%, 
   h3: 20%
 );
+
+
 
 /// Mixins ////////////////////////////////////////////////////////////////////////////////
 @mixin heading-styles {
